--- a/.env
+++ b/.env
@@ -19,3 +19,6 @@ APP_SECRET=da17b1ec774ecf70853b85b47b297afb
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
+
+ENV_FILE=.env
+
